Fleshed out the text of my biography into a rough first-draft.

--- a/Pages/Bio.html
+++ b/Pages/Bio.html
@@ -8,6 +8,14 @@
 
 <body>
 <h1>My Bio</h1>
-My name is JD Holwick and I am from Missoula, MT where I am also finishing my degree. Currently, I am completing my final six credits to graduate with my B.S. in computer science. During the summer of 2022 I interned at Edulog and currently work there part-time moving into a salaried position immediately after graduation. A little history about Edulog. -- Edulog, or the fullname, Educational Logistics, Inc., is a school bus routing software company. They have been operating since 1977 and started in my hometown of Missoula, MT. They provide services to schools all over the Untied States and Canada. <a href="https://www.edulog.com/about/" target="_blank">Click here</a> to learn more about the company I work for.
+My name is JD Holwick, and I am from Missoula, MT where I am also finishing my degree. Currently, I am completing my
+final six credits to graduate with my B.S. in computer science. During the summer of 2022 I interned at Edulog and
+currently work there part-time moving into a salaried position immediately after graduation. A little history about
+Edulog. -- Edulog, or the fullname, Educational Logistics, Inc., is a school bus routing software company. They have
+been operating since 1977 and started in my hometown of Missoula, MT. They provide services to schools all over the
+Untied States and Canada. <a href="https://www.edulog.com/about/" target="_blank">Click here</a> to learn more about the
+company I work for. In my free time I love to backpack mountain trails, day and multi-day, during the summer and
+downhill ski during the winter. (I tried to get into snowboarding but never got the hang of that... skiing I've been
+doing since I was a kid.) I also write a little and am currently working on a short fiction novella.
 </body>
 </html>
