--- a/Pages/Bio.html
+++ b/Pages/Bio.html
@@ -17,5 +17,19 @@ Untied States and Canada. <a href="https://www.edulog.com/about/" target="_blank
 company I work for. In my free time I love to backpack mountain trails, day and multi-day, during the summer and
 downhill ski during the winter. (I tried to get into snowboarding but never got the hang of that... skiing I've been
 doing since I was a kid.) I also write a little and am currently working on a short fiction novella.
+
 </body>
+
+<div class="page-wrap">
+    <footer>
+        <div class="footer-bottom">
+            <ul class="footer-menu">
+                <li><a href="LINK-URL">Menu Item 1</a></li>
+                <li><a href="LINK-URL">Menu Item 2</a></li>
+                <li><a href="LINK-URL">Menu Item 3</a></li>
+                <li><a href="LINK-URL">Menu Item 4</a></li>
+            </ul>
+        </div>
+    </footer>
+</div>
 </html>
