--- a/Pages/Bio.html
+++ b/Pages/Bio.html
@@ -18,18 +18,19 @@ company I work for. In my free time I love to backpack mountain trails, day and 
 downhill ski during the winter. (I tried to get into snowboarding but never got the hang of that... skiing I've been
 doing since I was a kid.) I also write a little and am currently working on a short fiction novella.
 
+<footer>
+    <div class="footer-bottom">
+        <ul class="footer-menu">
+            <li><a href="../index.html">Main</a></li>
+            <li><a href="Bio.html">Bio</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="Experience.html">Experience</a></li>
+            <li><a href="Projects.html">Projects</a></li>
+            <li><a href="Resume.pdf" target="_blank">Resume</a></li>
+        </ul>
+    </div>
+</footer>
+
 </body>
 
-<div class="page-wrap">
-    <footer>
-        <div class="footer-bottom">
-            <ul class="footer-menu">
-                <li><a href="LINK-URL">Menu Item 1</a></li>
-                <li><a href="LINK-URL">Menu Item 2</a></li>
-                <li><a href="LINK-URL">Menu Item 3</a></li>
-                <li><a href="LINK-URL">Menu Item 4</a></li>
-            </ul>
-        </div>
-    </footer>
-</div>
 </html>
