"Bio.html" is a now a "Bio_Experience.html." The two seemed to want to be combined better than being two separate documents.

--- a/Pages/Bio_Experience.html
+++ b/Pages/Bio_Experience.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>My Bio</h1>
+<h1>Bio & Experience</h1>
 My name is JD Holwick, and I am from Missoula, MT where I am also finishing my degree. Currently, I am completing my
 final six credits to graduate with my B.S. in computer science. During the summer of 2022 I interned at Edulog and
 currently work there part-time moving into a salaried position immediately after graduation. A little history about
@@ -22,9 +22,8 @@ doing since I was a kid.) I also write a little and am currently working on a sh
     <div class="footer-bottom">
         <ul class="footer-menu">
             <li><a href="../index.html">Main</a></li>
-            <li><a href="Bio.html">Bio</a></li>
+            <li><a href="Bio_Experience.html">Bio</a></li>
             <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Experience.html">Experience</a></li>
             <li><a href="Projects.html">Projects</a></li>
             <li><a href="Resume.pdf" target="_blank">Resume</a></li>
         </ul>
