--- a/Pages/Bio_Experience.html
+++ b/Pages/Bio_Experience.html
@@ -11,7 +11,7 @@
 My name is JD Holwick, and I am from Missoula, MT where I am also finishing my degree. Currently, I am completing my
 final six credits to graduate with my B.S. in computer science. During the summer of 2022 I interned at Edulog and
 currently work there part-time moving into a salaried position immediately after graduation. A little history about
-Edulog. -- Edulog, or the fullname, Educational Logistics, Inc., is a school bus routing software company. They have
+Edulog. -- Edulog, or the full name, Educational Logistics, Inc., is a school bus routing software company. They have
 been operating since 1977 and started in my hometown of Missoula, MT. They provide services to schools all over the
 Untied States and Canada. <a href="https://www.edulog.com/about/" target="_blank">Click here</a> to learn more about the
 company I work for. In my free time I love to backpack mountain trails, day and multi-day, during the summer and
@@ -21,10 +21,10 @@ doing since I was a kid.) I also write a little and am currently working on a sh
 <footer>
     <div class="footer-bottom">
         <ul class="footer-menu">
-            <li><a href="../index.html">Main</a></li>
-            <li><a href="Bio_Experience.html">Bio</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Projects.html">Projects</a></li>
+            <li><a href="../index.html">Main</a> | </li>
+            <li><a href="Bio_Experience.html">Bio & Experience</a> | </li>
+            <li><a href="Projects.html">Projects</a> | </li>
+            <li><a href="Contact.html">Contact</a> | </li>
             <li><a href="Resume.pdf" target="_blank">Resume</a></li>
         </ul>
     </div>
